syntax = "proto3";

package greet;

option go_package="greetpb";

message Greeting{
	string first_name = 1;
	string last_name = 2;
}

message GreetReq  {
	Greeting greeting = 1;
}

message GreetRes {
	string result = 1;
}

message GreetManyReq  {
	Greeting greeting = 1;
}

message GreetManyRes {
	string result = 1;
}

message GreetLongReq  {
	Greeting greeting = 1;
}

message GreetLongRes {
	string result = 1;
}

message GreetEveryOneReq  {
	Greeting greeting = 1;
}

message GreetEveryOneRes {
	string result = 1;
}

message GreetDeadLineReq  {
	Greeting greeting = 1;
}

message GreetDeadLineRes {
	string result = 1;
}

service GreetService{
	rpc Greet(GreetReq) returns (GreetRes) {};
	rpc GreetMany(GreetManyReq) returns (stream GreetManyRes) {};
	rpc GreetLong(stream GreetLongReq) returns (GreetLongRes) {};
	rpc GreetEveryOne(stream GreetEveryOneReq) returns (stream GreetEveryOneRes){};
	rpc GreetWithDeadLine(GreetDeadLineReq)  returns (GreetDeadLineRes) {};
}
